--- a/pgcli/Dockerfile
+++ b/pgcli/Dockerfile
@@ -1,8 +1,7 @@
 FROM alpine:3.23
 
 ENV PGHOST="postgres_sql_srv" \
-    PGUSER="postgres" \
-    PGDATABASE="KostenDB"
+    PGUSER="postgres"
 
 RUN apk add --no-cache pgcli
 
